fixed card image display issue on shuffle page

--- a/public/spread.html
+++ b/public/spread.html
@@ -140,7 +140,7 @@
     .shuffle-container { display:none; flex-direction:column; align-items:center; justify-content:flex-start; gap:0; width:100%; height:100%; padding-top:120px; }
     .shuffle-container.active { display:flex; }
     .card-stack { position:relative; width:180px; height:260px; transition: transform .5s ease; }
-    .stack-card { position:absolute; width:180px; height:260px; border-radius:12px; background-image:url('/assets/backs/card-back.png'); background-size:cover; background-position:center; background-color:#333; box-shadow:0 8px 25px rgba(0,0,0,0.4); }
+    .stack-card { position:absolute; width:180px; height:260px; border-radius:12px; background-image:url('/assets/backs/card-back.webp'); background-size:cover; background-position:center; background-color:#333; box-shadow:0 8px 25px rgba(0,0,0,0.4); }
 
     .loading-container { display:none; flex-direction:column; justify-content:flex-start; align-items:center; text-align:center; gap:0; width:100%; height:100%; padding-top:150px; }
     .loading-container.active { display:flex; }
