--- a/public/spread.html
+++ b/public/spread.html
@@ -136,18 +136,14 @@
       overflow:visible;
     }
 
-    /* Shuffle / Loading / Selection / Carousel */
+    /* Shuffle / Selection / Carousel (loading container kept but empty/unused) */
     .shuffle-container { display:none; flex-direction:column; align-items:center; justify-content:flex-start; gap:0; width:100%; height:100%; padding-top:120px; }
     .shuffle-container.active { display:flex; }
     .card-stack { position:relative; width:180px; height:260px; transition: transform .5s ease; }
     .stack-card { position:absolute; width:180px; height:260px; border-radius:12px; background-image:url('/assets/backs/card-back.webp'); background-size:cover; background-position:center; background-color:#333; box-shadow:0 8px 25px rgba(0,0,0,0.4); }
 
-    .loading-container { display:none; flex-direction:column; justify-content:flex-start; align-items:center; text-align:center; gap:0; width:100%; height:100%; padding-top:150px; }
-    .loading-container.active { display:flex; }
-    .loading-title { font-size:36px; color:#111827; margin-bottom:30px; opacity:1; transition: opacity 1s; }
-    .loading-title.hidden { opacity:0; }
-    .loading-subtitle { font-size:20px; color:#374151; opacity:0; transition: opacity .6s; animation:pulse 1.5s infinite ease-in-out; }
-    @keyframes pulse { 0%{opacity:.4} 50%{opacity:1} 100%{opacity:.4} }
+    .loading-container { display:none; }
+    .loading-container.active { display:none; } /* intentionally hidden; we use the ritual overlay instead */
 
     .card-selection-container { display:none; flex-direction:column; justify-content:center; align-items:center; gap:20px; width:100%; }
     .card-selection-container.active { display:flex; }
@@ -201,6 +197,121 @@
     .carousel-arrow:hover { transform: translateY(-50%) translateY(-1px); background: rgba(0,0,0,0.08); }
     .carousel-arrow.prev { left:8px; }
     .carousel-arrow.next { right:8px; }
+
+    /* === RITUAL OVERLAY (breathing animation) === */
+    :root {
+      --bg1: #0d0f1a;
+      --bg2: #151a2b;
+      --ring: rgba(255,255,255,.18);
+      --panel: rgba(255,255,255,.06);
+      --panel-border: rgba(255,255,255,.12);
+      --muted: rgba(255,255,255,.75);
+      --breath: 6s;
+      --fade: .75s;
+    }
+    .ritual {
+      position: fixed;
+      inset: 0;
+      z-index: 99999;
+      display: none; /* hidden until we start */
+      place-items: center;
+      padding: clamp(16px, 4vw, 40px);
+      isolation: isolate;
+      color: #fff;
+      background:
+        radial-gradient(1200px 800px at 25% 20%, rgba(147,51,234,.08), transparent 55%),
+        radial-gradient(1000px 700px at 75% 85%, rgba(59,130,246,.08), transparent 60%),
+        linear-gradient(180deg, var(--bg1), var(--bg2));
+      animation: bg-shift 32s ease-in-out infinite alternate;
+    }
+    .ritual.active { display: grid; }
+    @keyframes bg-shift {
+      0%   { background-position: 0% 0%, 0% 0%, 0% 0%; }
+      100% { background-position: 5% 2%, -3% -4%, 0% 100%; }
+    }
+    .breath {
+      position: absolute;
+      width: min(60vmin, 520px);
+      aspect-ratio: 1/1;
+      border-radius: 50%;
+      display: grid;
+      place-items: center;
+      filter: drop-shadow(0 10px 40px rgba(0,0,0,.45));
+      animation: breathe var(--breath) ease-in-out infinite;
+    }
+    .breath::before,
+    .breath::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border-radius: 50%;
+    }
+    .breath::before {
+      background:
+        radial-gradient(closest-side, transparent 68%, var(--ring) 72%, transparent 76%),
+        radial-gradient(closest-side, rgba(147,51,234,.12), transparent 75%);
+      filter: blur(.3px);
+    }
+    .breath::after {
+      margin: 10%;
+      background:
+        radial-gradient(circle at 50% 45%, rgba(255,255,255,.18), rgba(255,255,255,.06) 45%, transparent 70%);
+      box-shadow:
+        0 0 50px 18px rgba(147,51,234,.12),
+        inset 0 0 60px rgba(255,255,255,.08);
+    }
+    @keyframes breathe {
+      0%   { transform: scale(0.92); opacity: .9; }
+      50%  { transform: scale(1.04); opacity: 1; }
+      100% { transform: scale(0.92); opacity: .9; }
+    }
+    .panel {
+      position: relative;
+      z-index: 2;
+      width: min(900px, 92vw);
+      display: grid;
+      place-items: center;
+      gap: 16px;
+      padding: clamp(18px, 4vw, 36px);
+      border-radius: 24px;
+      backdrop-filter: blur(10px) saturate(120%);
+      -webkit-backdrop-filter: blur(10px) saturate(120%);
+      background: var(--panel);
+      border: 1px solid var(--panel-border);
+    }
+    .title {
+      font-size: clamp(24px, 5vw, 48px);
+      line-height: 1.2;
+      letter-spacing: .2px;
+      text-align: center;
+      opacity: 0;
+      transform: translateY(6px);
+      transition: opacity var(--fade) ease, transform var(--fade) ease;
+      text-shadow: 0 1px 18px rgba(107,70,193,.35);
+    }
+    .title.show { opacity: 1; transform: translateY(0); }
+    .hint {
+      font-size: clamp(13px, 2.2vw, 18px);
+      color: var(--muted);
+      opacity: .85;
+      text-align: center;
+    }
+    .progress {
+      margin-top: 4px;
+      font-size: clamp(11px, 2vw, 14px);
+      color: rgba(255,255,255,.6);
+      letter-spacing: .35px;
+      user-select: none;
+      text-align: center;
+    }
+    .pulse { animation: hintpulse 2.2s ease-in-out infinite; }
+    @keyframes hintpulse { 0%{opacity:.6} 50%{opacity:1} 100%{opacity:.6} }
+    @media (prefers-reduced-motion: reduce) {
+      .ritual { animation: none; }
+      .breath { animation: none; }
+      .pulse { animation: none; }
+      .title { transition: none; }
+    }
   </style>
 </head>
 <body>
@@ -246,15 +357,13 @@
       </div>
     </div>
 
-    <div class="loading-container" id="loadingContainer">
-      <div class="loading-title" id="loadingTitle">Take a deep breath…</div>
-      <div class="loading-subtitle" id="loadingSubtitle">Fetching your spread ✦</div>
-    </div>
+    <!-- (Intentionally empty) loading container; we use the ritual overlay instead -->
+    <div class="loading-container" id="loadingContainer"></div>
 
     <div class="card-selection-container" id="cardSelectionContainer">
       <div class="card-row" id="row1"></div>
       <div class="card-row" id="row2"></div>
-      <div class="selection-progress" id="selectionProgress">Select 6 cards (0 selected)</div>
+      <div class="selection-progress" id="selectionProgress"></div>
     </div>
 
     <div class="card-carousel-container" id="cardCarouselContainer">
@@ -268,18 +377,21 @@
     </div>
   </div>
 
+  <!-- RITUAL OVERLAY -->
+  <div class="ritual" id="ritual" aria-live="polite">
+    <div class="breath" aria-hidden="true"></div>
+    <div class="panel" role="status" aria-atomic="true">
+      <div class="title" id="msg">Focus on your question</div>
+      <div class="hint pulse" id="hint">We’re preparing your deck…</div>
+      <div class="progress" id="progress">1 / 3</div>
+    </div>
+  </div>
+
   <script>
     // ---------- utilities ----------
     const isMobileView = () => window.matchMedia('(max-width: 768px)').matches;
-
-    function bootOnce() {
-      if (window.__erikaBooted) return;
-      window.__erikaBooted = true;
-      window.__setBodyTopPaddingFromBar?.();
-      init();
-      fitRowsForMobile();
-      document.body.setAttribute('data-phase', 'shuffle');
-    }
+    const PLACEHOLDER = '/assets/faces/placeholder.png';
+    const sleep = (ms) => new Promise(r => setTimeout(r, ms));
 
     // State
     let spreadCards = [];
@@ -287,20 +399,15 @@
     let currentCardIndex = 0;
     let userQuestion = sessionStorage.getItem('userQuestion') || 'What guidance do I need right now?';
     let readingPromise = null;
+    let isReadingPhase = false;
 
     const chatMessages = document.getElementById('chatMessages');
     const shuffleContainer = document.getElementById('shuffleContainer');
-    const loadingContainer = document.getElementById('loadingContainer');
+    const loadingContainer = document.getElementById('loadingContainer'); // unused visual
     const cardSelectionContainer = document.getElementById('cardSelectionContainer');
     const cardCarouselContainer = document.getElementById('cardCarouselContainer');
     const popupOverlay = document.getElementById('popupOverlay');
     const cardStack = document.getElementById('cardStack');
-
-    let isReadingPhase = false;
-
-    // ---------- image helpers ----------
-    const PLACEHOLDER = '/assets/faces/placeholder.png';
-    const sleep = (ms) => new Promise(r => setTimeout(r, ms));
 
     function ensureImage(url, timeoutMs = 8000) {
       return new Promise((resolve) => {
@@ -317,13 +424,12 @@
         while (q.length) {
           const u = q.shift();
           await ensureImage(u);
-          await sleep(0); // yield
+          await sleep(0);
         }
       });
       await Promise.all(workers);
     }
 
-    // ---------- fetch helper (adaptive timeout, visibility-aware) ----------
     function isSlowNet() {
       const c = navigator.connection || navigator.mozConnection || navigator.webkitConnection;
       return !!(c && (c.saveData || /(^2g$|^slow-2g$)/i.test(c.effectiveType)));
@@ -397,45 +503,42 @@
       setTimeout(() => wrap.classList.add('visible'), 50);
     }
 
- 
     function addStandaloneButton(text, cb) {
-  const wrap = document.createElement('div');
-  wrap.className = 'cta-wrap';
+      const wrap = document.createElement('div');
+      wrap.className = 'cta-wrap';
 
-  const btn = document.createElement('button');
-  btn.className = 'chat-button';
-  btn.textContent = text;
-  btn.onclick = () => {
-    wrap.remove();  // 🔹 remove the CTA from chat immediately after click
-    cb();           // run the original callback (e.g., startShuffle)
-  };
+      const btn = document.createElement('button');
+      btn.className = 'chat-button';
+      btn.textContent = text;
+      btn.onclick = () => {
+        wrap.remove();
+        cb();
+      };
 
-  wrap.appendChild(btn);
+      wrap.appendChild(btn);
 
-  if (isReadingPhase) {
-    chatMessages.appendChild(wrap);
-    chatMessages.scrollTop = chatMessages.scrollHeight;
-  } else {
-    chatMessages.insertBefore(wrap, chatMessages.firstChild);
-    chatMessages.scrollTop = 0;
-  }
+      if (isReadingPhase) {
+        chatMessages.appendChild(wrap);
+        chatMessages.scrollTop = chatMessages.scrollHeight;
+      } else {
+        chatMessages.insertBefore(wrap, chatMessages.firstChild);
+        chatMessages.scrollTop = 0;
+      }
 
-  requestAnimationFrame(() => wrap.classList.add('visible'));
-}
-
- 
+      requestAnimationFrame(() => wrap.classList.add('visible'));
+    }
 
     function showPhase(phase) {
       document.body.setAttribute('data-phase', phase);
 
       shuffleContainer.classList.remove('active');
-      loadingContainer.classList.remove('active');
+      loadingContainer.classList.remove('active'); // stays hidden
       cardSelectionContainer.classList.remove('active');
       cardCarouselContainer.classList.remove('active');
 
       switch (phase) {
         case 'shuffle':   shuffleContainer.classList.add('active'); break;
-        case 'loading':   loadingContainer.classList.add('active'); break;
+        case 'loading':   /* ritual overlay will show instead */ break;
         case 'selection': cardSelectionContainer.classList.add('active'); break;
         case 'carousel':  cardCarouselContainer.classList.add('active'); break;
       }
@@ -462,31 +565,79 @@
       }, 200);
     }
 
-    async function startShuffle() {
-      showPhase('loading');
-      cardStack.style.transform = 'scale(1.05) rotate(2deg)';
+    // === New ritual sequence ===
+    async function runRitualSequence() {
+      const ritual = document.getElementById('ritual');
+      const $msg = document.getElementById('msg');
+      const $hint = document.getElementById('hint');
+      const $progress = document.getElementById('progress');
 
-      const loadingTitle = document.getElementById('loadingTitle');
-      const loadingSubtitle = document.getElementById('loadingSubtitle');
-      loadingTitle?.classList.add('hidden');
-      loadingSubtitle?.classList.add('visible');
+      const MESSAGES = [
+        "Focus on your question",
+        "Say it out loud or in your head",
+        "Fetching your cards…"
+      ];
+      const FETCH_AT_INDEX = 2;      // third message (0-based)
+      const PER_MESSAGE_MS = 3800;
+      const MIN_TOTAL_MS = 12000;
 
-      try {
-        const res = await fetch('/api/spread', { cache: 'no-store' });
-        if (!res.ok) throw new Error(`spread ${res.status}`);
-        const data = await res.json();
-        spreadCards = data.spread || [];
+      ritual.classList.add('active');
+      const started = Date.now();
+      let fetchPromise = null;
 
-        // ensure the back image is cached; faces are deferred
-        await ensureImage('/assets/backs/card-back.webp');
+      for (let i = 0; i < MESSAGES.length; i++) {
+        $msg.classList.remove('show');
+        await sleep(120);
+        $msg.textContent = MESSAGES[i];
+        $progress.textContent = `${i + 1} / ${MESSAGES.length}`;
+        requestAnimationFrame(() => $msg.classList.add('show'));
 
-        cardStack.style.transform = 'scale(1) rotate(0deg)';
-        showCardSelection();
-      } catch (error) {
-        console.error('Error fetching spread:', error);
-        addMessage('Let me try shuffling those cards again...');
-        setTimeout(startShuffle, 1200);
+        if (i === FETCH_AT_INDEX && !fetchPromise) {
+          $hint.textContent = "Shuffling your deck…";
+
+          // START backend fetch here (only now)
+          fetchPromise = (async () => {
+            try {
+              const res = await fetch('/api/spread', { cache: 'no-store' });
+              if (!res.ok) throw new Error(`spread ${res.status}`);
+              const data = await res.json();
+              spreadCards = data.spread || [];
+              sessionStorage.setItem('spread', JSON.stringify(spreadCards));
+              await ensureImage('/assets/backs/card-back.webp');
+            } catch (err) {
+              console.error('❌ Error fetching spread:', err);
+              $hint.textContent = "Network is a bit slow… we’ll finish preparing in the next screen.";
+            }
+          })();
+        }
+
+        await sleep(PER_MESSAGE_MS);
       }
+
+      const elapsed = Date.now() - started;
+      if (elapsed < MIN_TOTAL_MS) await sleep(MIN_TOTAL_MS - elapsed);
+      try { if (fetchPromise) await fetchPromise; } catch {}
+
+      // Fade out ritual and proceed
+      ritual.style.transition = 'opacity .6s ease';
+      ritual.style.opacity = '0';
+      setTimeout(() => {
+        ritual.classList.remove('active');
+        ritual.style.opacity = '';
+        if (Array.isArray(spreadCards) && spreadCards.length) {
+          showCardSelection();
+        } else {
+          addMessage("Let me try shuffling those cards again...");
+          setTimeout(startShuffle, 1000);
+        }
+      }, 620);
+    }
+
+    async function startShuffle() {
+      showPhase('loading');               // keeps the deck area hidden; overlay takes over
+      cardStack.style.transform = 'scale(1.05) rotate(2deg)';
+      await runRitualSequence();          // handles copy + timing + backend call
+      cardStack.style.transform = 'scale(1) rotate(0deg)';
     }
 
     function fitRowsForMobile() {
@@ -564,7 +715,6 @@
 
         const front = document.createElement('div');
         front.className = 'card-face card-front';
-        // Store face URL from deck.js (already webp/png as needed)
         front.dataset.image = card.image;
 
         inner.appendChild(back);
@@ -583,7 +733,6 @@
         container.appendChild(el);
       });
 
-      // Warm a couple near the center so the first flip feels instant
       warmUpFaces(container);
     }
 
@@ -602,7 +751,6 @@
       frontEl.dataset.loaded = '1';
     }
 
-    // ---------- selection → reading / carousel ----------
     function updateSelectionProgress() {
       document.getElementById('selectionProgress').textContent = `Select 6 cards (${selectedCards.length} selected)`;
     }
@@ -623,16 +771,13 @@
       updateSelectionProgress();
 
       if (selectedCards.length === 6) {
-        // 1) Start the reading immediately
         readingPromise = requestReading();
 
-        // 2) Show carousel as soon as the first face is definitely ready
         const faceUrls = selectedCards.map(c => c.image);
         ensureImage(faceUrls[0]).finally(() => showCardCarousel());
 
-        // 3) Fill the rest with low concurrency (avoid janking mobile CPU/network)
         (async () => {
-          await Promise.race([readingPromise, sleep(1000)]); // let reading get a head start
+          await Promise.race([readingPromise, sleep(1000)]);
           preloadSequential(faceUrls.slice(1), isMobileView() ? 2 : 4);
         })();
       }
@@ -698,7 +843,6 @@
       cardsWrap.innerHTML = '';
       nav.innerHTML = '';
 
-      // Skeletons first for instant UI
       selectedCards.forEach((card, index) => {
         const cardEl = document.createElement('div');
         cardEl.className = 'carousel-card skeleton';
@@ -711,7 +855,6 @@
         nav.appendChild(dot);
       });
 
-      // Resolve and apply faces with fallback
       const els = Array.from(cardsWrap.querySelectorAll('.carousel-card'));
       const urls = selectedCards.map(c => c.image);
       await Promise.allSettled(urls.map(async (url, i) => {
@@ -743,7 +886,6 @@
       dots.forEach((dot, i) => dot.classList.toggle('active', i===currentCardIndex));
     }
 
-    // --- helpers for reading ---
     function deriveNameFromImage(src = '') {
       try {
         const parts = src.split('/');
@@ -800,6 +942,14 @@
     }
 
     // ---------- boot ----------
+    function bootOnce() {
+      if (window.__erikaBooted) return;
+      window.__erikaBooted = true;
+      window.__setBodyTopPaddingFromBar?.();
+      init();
+      fitRowsForMobile();
+      document.body.setAttribute('data-phase', 'shuffle');
+    }
     document.addEventListener('DOMContentLoaded', bootOnce);
     window.addEventListener('load', () => {
       window.__setBodyTopPaddingFromBar?.();
