--- a/public/index.html
+++ b/public/index.html
@@ -2,128 +2,301 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Tapp - Welcome</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tapp - Ask Your Question</title>
+
   <style>
-    :root{ --ink:#111827; --accent:#6b46c1; }
-
-    *{ box-sizing:border-box; }
-    html,body{
-      margin:0; padding:0; width:100%; min-height:100%;
-      font-family:Poppins, system-ui, -apple-system, sans-serif;
-      background:#fff; color:var(--ink);
+    @font-face {
+      font-family: 'Bookman JF Pro';
+      src: url('/assets/fonts/BookmanJFPro-Regular.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+      font-display: swap;
+    }
+    @font-face {
+      font-family: 'AuthenticSignature';
+      src: url('/assets/fonts/authentic-signature.otf') format('opentype');
+      font-weight: normal;
+      font-style: normal;
     }
 
-    /* Layout */
-    .hero{
-      display:grid;
-      grid-template-columns:1.1fr 1fr;  /* form | art */
-      gap:48px; align-items:center;
-      max-width:1200px; margin:0 auto;
-      padding: clamp(20px, 4vw, 64px);
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body {
+      width: 100%; height: 100%;
+      background: #000;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
     }
 
-    /* Left (logo + signup) */
-    .left{ display:flex; flex-direction:column; gap:24px; align-items:flex-start; }
-    .tapp-logo{ width:360px; max-width:100%; height:auto; display:block; }
-    .signup{ display:flex; gap:12px; max-width:420px; width:100%; flex-wrap:wrap; }
-    .signup-input{
-      flex:1 1 260px; padding:14px 18px; font-size:16px;
-      border:2px solid var(--ink); border-radius:30px; outline:none; background:#fff;
+    /* Top Bar */
+    .top-bar {
+      background: black;
+      padding: 15px 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
+      z-index: 100;
+      border-bottom: 1px solid #333;
     }
-    .signup-button{
-      flex:0 0 auto; padding:14px 20px; font-size:16px; font-weight:600;
-      border:2px solid var(--ink); border-radius:30px; background:var(--ink); color:#fff; cursor:pointer;
+    .logo-wrap { display: flex; align-items: center; gap: 6px; }
+    .tapp-logo { height: 75px; }
+    .byline {
+      font-family: 'AuthenticSignature', cursive;
+      font-size: 18px; color: white;
     }
-
-    /* Right (cards) */
-    .art{ display:flex; align-items:center; justify-content:center; }
-    .card-image{
-      width:100%; max-width:520px; height:auto; object-fit:contain; display:block;
+    .booking-button {
+      background: white; color: black;
+      padding: 12px 20px; border-radius: 8px;
+      font-size: 14px; font-weight: 600;
+      text-decoration: none; transition: 0.3s;
     }
-
-    /* Background garnish (optional, subtle) */
-    .bg-dots,.bg-grad{ position:fixed; inset:0; pointer-events:none; z-index:-1; }
-    .bg-dots{
-      opacity:.03;
-      background-image:
-        radial-gradient(circle at 25% 25%, #6b46c1 2px, transparent 2px),
-        radial-gradient(circle at 75% 75%, #9333ea 2px, transparent 2px);
-      background-size:60px 60px; background-position:0 0, 30px 30px;
-    }
-    .bg-grad{ opacity:.02; background:linear-gradient(135deg, #6b46c1 0%, transparent 50%, #9333ea 100%); }
-
-    /* ===== Mobile/tablet adjustments ===== */
-    @media (max-width: 1024px){
-      .hero{
-        grid-template-columns:1fr;      /* stack */
-        gap:20px;
-        align-items:start;
-        padding:16px;                   /* smaller top padding = higher content */
-        padding-top: max(12px, env(safe-area-inset-top));
-      }
-      /* Form/logo FIRST */
-      .left{
-        order:1;
-        align-items:center;
-        text-align:center;
-        gap:18px;                       /* tighter spacing */
-      }
-      /* Cards SECOND (below form) */
-      .art{
-        order:2;
-        justify-content:center;
-      }
-      .tapp-logo{
-        width:240px;                    /* smaller logo so input fits above fold */
-      }
-      .signup{
-        justify-content:center;
-        max-width:360px;
-      }
-      .signup-input{
-        padding:12px 16px;
-        font-size:15px;
-      }
-      .signup-button{
-        padding:12px 18px;
-        font-size:15px;
-      }
-      /* Keep cards visible without crowding the form */
-      .card-image{
-        width:85%;
-        max-width:380px;
-        height:auto;
-        max-height:38vh;                /* prevents pushing content off-screen */
-        object-fit:contain;
-      }
+    .booking-button:hover {
+      background: #f0f0f0; transform: translateY(-1px);
+      box-shadow: 0 4px 12px rgba(255,255,255,0.3);
     }
 
-    @media (max-width: 480px){
-      .hero{ padding:12px; }
-      .tapp-logo{ width:210px; }
-      .signup{ max-width:320px; }
-      .card-image{ max-width:340px; max-height:36vh; }
+    /* Question Section */
+    .question-container {
+      height: 100vh;
+      display: flex; align-items: center; justify-content: center;
+      padding: 120px 20px 40px;
     }
+    .question-content { text-align: center; max-width: 600px; }
+    .question-title {
+      color: white; font-family: 'Bookman JF Pro', serif;
+      font-size: 42px; margin-bottom: 40px; font-weight: normal;
+      position: relative; display: inline-block;
+    }
+    .stars-container {
+      position: absolute; right: -20px; top: 50%;
+      transform: translateY(-50%);
+    }
+    .star {
+      color: white; font-size: 20px; transform: scaleY(1.5);
+      filter: drop-shadow(0 0 8px rgba(255,255,255,0.3));
+      position: absolute;
+    }
+    .star:first-child { top: -30px; left: 0; }
+    .star:last-child { top: 0px; left: 20px; }
+    .erika-message-section { display: flex; gap: 20px; margin-bottom: 50px; max-width: 600px; }
+    .erika-logo {
+      width: 60px; height: 60px; border-radius: 50%;
+      object-fit: cover; border: 2px solid rgba(255,255,255,0.2);
+    }
+    .question-subtitle {
+      color: rgba(255,255,255,0.8);
+      font-size: 16px; line-height: 1.6;
+      text-align: left; flex: 1;
+    }
+    .question-input {
+      width: 100%; max-width: 500px;
+      padding: 16px 20px; font-size: 16px;
+      border: 1px solid rgba(255,255,255,0.3);
+      border-radius: 15px;
+      background: rgba(255,255,255,0.05);
+      color: white; text-align: center;
+      margin-bottom: 30px;
+    }
+    .continue-button {
+      padding: 14px 30px; font-size: 14px;
+      border: 1px solid white; border-radius: 30px;
+      background: transparent; color: white;
+      cursor: pointer; opacity: 0.5; pointer-events: none;
+    }
+    .continue-button.active { opacity: 1; pointer-events: auto; }
+    .generate-button {
+      padding: 14px 30px; font-size: 14px;
+      border: 1px solid #B8860B; border-radius: 30px;
+      background: linear-gradient(135deg, rgba(184,134,11,0.1), rgba(218,165,32,0.05));
+      color: #B8860B; margin-left: 15px;
+    }
+    .button-container { display: flex; justify-content: center; gap: 15px; flex-wrap: wrap; }
+
+    /* Upgrade Screen from fetch page */
+    .upgrade-screen {
+      position: fixed;
+      inset: 0;
+      display: none;
+      justify-content: center;
+      align-items: center;
+      background:
+        radial-gradient(1200px 800px at 25% 20%, rgba(147,51,234,.08), transparent 55%),
+        radial-gradient(1000px 700px at 75% 85%, rgba(59,130,246,.08), transparent 60%),
+        linear-gradient(180deg, #0d0f1a, #151a2b);
+      animation: bg-shift 32s ease-in-out infinite alternate;
+      z-index: 2000;
+    }
+    @keyframes bg-shift {
+      0%   { background-position: 0% 0%, 0% 0%, 0% 0%; }
+      100% { background-position: 5% 2%, -3% -4%, 0% 100%; }
+    }
+    .breath {
+      position: absolute;
+      width: min(60vmin, 520px);
+      aspect-ratio: 1/1;
+      border-radius: 50%;
+      display: grid;
+      place-items: center;
+      filter: drop-shadow(0 10px 40px rgba(0,0,0,.45));
+      animation: breathe 6s ease-in-out infinite;
+    }
+    .breath::before,
+    .breath::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      border-radius: 50%;
+    }
+    .breath::before {
+      background:
+        radial-gradient(closest-side, transparent 68%, rgba(255,255,255,.18) 72%, transparent 76%),
+        radial-gradient(closest-side, rgba(147,51,234,.12), transparent 75%);
+      filter: blur(.3px);
+    }
+    .breath::after {
+      margin: 10%;
+      background:
+        radial-gradient(circle at 50% 45%, rgba(255,255,255,.18), rgba(255,255,255,.06) 45%, transparent 70%);
+      box-shadow:
+        0 0 50px 18px rgba(147,51,234,.12),
+        inset 0 0 60px rgba(255,255,255,.08);
+    }
+    @keyframes breathe {
+      0% { transform: scale(0.92); opacity: .9; }
+      50% { transform: scale(1.04); opacity: 1; }
+      100% { transform: scale(0.92); opacity: .9; }
+    }
+
+    .upgrade-panel {
+      position: relative;
+      z-index: 2;
+      background: rgba(255,255,255,0.06);
+      backdrop-filter: blur(10px) saturate(120%);
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 24px;
+      padding: clamp(18px, 4vw, 36px);
+      max-width: 500px;
+      width: 92vw;
+      text-align: center;
+      font-family: 'Bookman JF Pro', serif;
+      color: #fff;
+    }
+    .upgrade-panel h2 {
+      font-size: clamp(24px, 5vw, 36px);
+      margin-bottom: 16px;
+    }
+    .upgrade-panel p {
+      font-size: 16px;
+      color: rgba(255,255,255,0.75);
+      margin-bottom: 24px;
+    }
+    .close-upgrade {
+      position: absolute;
+      top: 14px;
+      right: 14px;
+      font-size: 26px;
+      background: transparent;
+      border: none;
+      color: rgba(255,255,255,0.8);
+      cursor: pointer;
+    }
+    .close-upgrade:hover { color: #fff; }
   </style>
 </head>
+
 <body>
-  <div class="bg-dots"></div>
-  <div class="bg-grad"></div>
+  <!-- Top Bar -->
+  <div class="top-bar">
+    <div class="logo-wrap">
+      <img src="/assets/tapp-logo.png" class="tapp-logo" alt="Tapp Logo">
+      <span class="byline">by Erika Owls</span>
+    </div>
+    <a href="https://erikaowlsspiritualmentor.as.me/schedule/e19f47fc" target="_blank" class="booking-button">
+      Book a 1-1 Psychic Session
+    </a>
+  </div>
 
-  <main class="hero">
-    <section class="left">
-      <img src="/assets/tapp-logo-homepage.png" alt="Tapp logo" class="tapp-logo">
-      <div class="signup">
-        <input type="email" placeholder="Enter your email" class="signup-input" />
-        <button class="signup-button" onclick="window.location.href='/question-screen.html'">Join the Beta</button>
+  <!-- Main Question UI -->
+  <div class="question-container" id="questionSection">
+    <div class="question-content">
+      <h1 class="question-title">
+        What's calling to you?
+        <div class="stars-container"><span class="star">✦</span><span class="star">✦</span></div>
+      </h1>
+      <div class="erika-message-section">
+        <img src="/assets/erika-avatar.png" alt="Erika" class="erika-logo">
+        <p class="question-subtitle">Take a moment to center yourself. The more intentional you are, the clearer your path will become.</p>
       </div>
-    </section>
+      <input type="text" class="question-input" id="questionInput" placeholder="Ask your question..." maxlength="200">
+      <div class="button-container">
+        <button class="continue-button" id="continueBtn">Begin My Reading</button>
+        <button class="generate-button" id="generateBtn">Generate a Question</button>
+      </div>
+    </div>
+  </div>
 
-    <aside class="art">
-      <img src="/assets/cards/erika-cards-transparent.png" alt="Tarot cards" class="card-image">
-    </aside>
-  </main>
+  <!-- Full-Screen Upgrade -->
+  <div class="upgrade-screen" id="upgradeScreen">
+    <div class="breath"></div>
+    <div class="upgrade-panel">
+      <button class="close-upgrade" id="closeUpgrade" aria-label="Close">×</button>
+      <h2>Upgrade for Unlimited Readings</h2>
+      <p>You've reached your free limit of 3 questions. Upgrade now to ask unlimited questions anytime.</p>
+      <button class="continue-button active" id="upgradeBtn">Upgrade for £3.70</button>
+    </div>
+  </div>
+
+  <script>
+    const questionInput = document.getElementById('questionInput');
+    const continueBtn = document.getElementById('continueBtn');
+    const generateBtn = document.getElementById('generateBtn');
+    const upgradeScreen = document.getElementById('upgradeScreen');
+    const questionSection = document.getElementById('questionSection');
+
+    questionInput.addEventListener('input', () => {
+      continueBtn.classList.toggle('active', questionInput.value.trim().length > 0);
+    });
+
+    generateBtn.addEventListener('click', () => {
+      const qs = [
+        "What's my energy today?", "What's my superpower today?",
+        "What are some good intentions for the week?", "How are my relationships?",
+        "Where can I grow and step out of my comfort zone?", "How can I bring more love into my life?",
+        "What is blocking me from my goals?", "How do people around me see me?",
+        "How is my past impacting my current situation?"
+      ];
+      questionInput.value = qs[Math.floor(Math.random() * qs.length)];
+      continueBtn.classList.add('active');
+    });
+
+    continueBtn.addEventListener('click', proceedToReading);
+    questionInput.addEventListener('keypress', e => {
+      if (e.key === 'Enter' && questionInput.value.trim()) proceedToReading();
+    });
+
+    function proceedToReading() {
+      const question = questionInput.value.trim();
+      if (!question) return;
+      let count = parseInt(localStorage.getItem('questionCount') || '0', 10);
+      if (count >= 3) {
+        questionSection.style.display = 'none';
+        upgradeScreen.style.display = 'flex';
+        return;
+      }
+      localStorage.setItem('questionCount', count + 1);
+      sessionStorage.setItem('userQuestion', question);
+      window.location.href = '/spread.html';
+    }
+
+    document.getElementById('upgradeBtn').addEventListener('click', () => {
+      window.location.href = 'https://buy.stripe.com/9B67sKaoBaMd0Jgb5tbbG01';
+    });
+    document.getElementById('closeUpgrade').addEventListener('click', () => {
+      upgradeScreen.style.display = 'none';
+      questionSection.style.display = 'flex';
+    });
+  </script>
 </body>
 </html>
