--- a/public/shuffle-cards.html
+++ b/public/shuffle-cards.html
@@ -31,8 +31,8 @@
     html, body {
       width: 100%;
       height: 100%;
-      background: #000;
-      color: #fff;
+      background: #F1F4F7;
+      color: #F1F4F7;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
       overflow: hidden; /* no accidental scroll */
     }
@@ -121,7 +121,7 @@
       background-image: url('/assets/backs/card-back.webp');
       background-size: cover; background-position: center;
       background-color: #333;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 15px purple (0,0,0,0.3);
     }
     @supports (background: image-set(url('/assets/backs/card-back.webp') type('image/webp') 1x)) {
       .stack-card {
