--- a/public/spread.html
+++ b/public/spread.html
@@ -193,7 +193,7 @@
       background: rgba(0,0,0,0.04);
       color:#111827; font-size:22px; line-height:1; cursor:pointer;
       display:grid; place-items:center;
-      transition: transform .15s, background .2s, box-shadow .2s;
+      transition: transform .15s, background-transform .2s, box-shadow .2s;
     }
     .carousel-arrow:hover { transform: translateY(-50%) translateY(-1px); background: rgba(0,0,0,0.08); }
     .carousel-arrow.prev { left:8px; }
