--- a/public/spread.html
+++ b/public/spread.html
@@ -183,8 +183,8 @@
     .carousel-card.hidden { z-index:1; opacity:.3; transform: scale(0.6); }
 
     .carousel-nav { display:flex; gap:10px; margin-top:30px; }
-    .nav-dot { width:12px; height:12px; border-radius:50%; background:#e5e7eb; cursor:pointer; transition:all .3s; }
-    .nav-dot.active { background:#111827; transform: scale(1.2); }
+    .nav-dot { width:12px; height:12px; border-radius:50%; background:#e5e7eb; cursor:pointer; transition:all .3s;  display: none !important; }
+    .nav-dot.active { background:#111827; transform: scale(1.2);  display: none !important; }
 
     .carousel-arrow {
       position:absolute; top:50%; transform:translateY(-50%);
@@ -313,6 +313,14 @@
       .pulse { animation: none; }
       .title { transition: none; }
     }
+
+    #upgradeScreen .continue-button.active,
+.upgrade-panel .continue-button.active {
+  background: white !important;
+  color: black !important;
+  border: none !important;
+}
+
 #selectionProgress {
   display: none !important;
 }
