--- a/public/spread.html
+++ b/public/spread.html
@@ -321,6 +321,12 @@
   border: none !important;
 }
 
+.upgrade-panel .continue-button.active {
+  background: white !important;
+  color: black !important;
+  border: none !important;
+}
+
 #selectionProgress {
   display: none !important;
 }
