upgrade button fixed white and hotjar test

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
 
+  <!-- Hotjar Tracking Code for Site 6493538 (name missing) -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:6493538,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
 
   
   <meta charset="UTF-8" />
@@ -104,7 +116,7 @@
     .continue-button {
       padding: 14px 30px; font-size: 14px;
       border: 1px solid black; border-radius: 30px;
-      background: transparent; color: black;
+      background: white; color: black;
       cursor: pointer; opacity: 0.5; pointer-events: none;
     }
     .continue-button.active { opacity: 1; pointer-events: auto; }
@@ -318,8 +330,8 @@
     <div class="upgrade-panel">
       <button class="close-upgrade" id="closeUpgrade" aria-label="Close">×</button>
       <h2>Upgrade for Unlimited Readings</h2>
-      <p>You've reached your free limit of 3 questions. Upgrade now to ask unlimited questions anytime.</p>
-      <button class="continue-button active" id="upgradeBtn">Upgrade for £3.70</button>
+      <p>You've reached your free limit of 3 questions for this week. Come back next week or upgrade now to ask unlimited questions anytime.</p>
+      <button class="continue-button active" id="upgradeBtn">Upgrade for £3.70 </button>
     </div>
   </div>
 
