--- a/public/spread.html
+++ b/public/spread.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- Hotjar Tracking Code for Site 6493538 (name missing) -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:6493538,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Your Reading with Erika</title>
@@ -317,19 +331,19 @@
     #upgradeScreen .continue-button.active,
 .upgrade-panel .continue-button.active {
   background: white !important;
-  color: black !important;
+  color: white !important;
   border: none !important;
 }
 
 #upgradeBtn {
   background: white !important;
-  color: black !important;
+  color: white !important;
   border: none !important;
 }
 
 .upgrade-panel .continue-button.active {
   background: white !important;
-  color: black !important;
+  color: white !important;
   border: none !important;
 }
 
