New work for mytarotapp (keep production frozen)

--- a/public/index.html
+++ b/public/index.html
@@ -253,8 +253,8 @@
   <!-- Top Bar -->
   <div class="top-bar">
     <div class="logo-wrap">
-      <img src="/assets/tapp-logo.png" class="tapp-logo" alt="Tapp Logo">
-      <span class="byline">by Erika Owls</span>
+      <img src="/assets/your-tarot-app-logo.png" class="tapp-logo" alt="Tapp Logo">
+      <span class="byline">by Your Name Here</span>
     </div>
     <a href="https://erikaowlsspiritualmentor.as.me/schedule/e19f47fc" target="_blank" class="booking-button">
       Book a 1-1 Psychic Session
@@ -269,7 +269,7 @@
         <div class="stars-container"><span class="star">✦</span><span class="star">✦</span></div>
       </h1>
       <div class="erika-message-section">
-        <img src="/assets/erika-avatar.png" alt="Erika" class="erika-logo">
+        <img src="/assets/your-logo-here.png" alt="Erika" class="erika-logo">
         <p class="question-subtitle">Take a moment to center yourself. The more intentional you are, the clearer your path will become.</p>
       </div>
       <input type="text" class="question-input" id="questionInput" placeholder="Ask your question..." maxlength="200">
