--- a/public/video-intro.html
+++ b/public/video-intro.html
@@ -425,7 +425,7 @@
     <div class="welcome-content" id="welcomeContent">
       <div class="welcome-header">Welcome to Tapp</div>
       <div class="erika-profile">
-        <img src="/assets/erika-avatar.png" alt="Erika Owls" class="erika-avatar">
+        <img src="/assets/your-logo-here.png" alt="Erika Owls" class="erika-avatar">
         <div class="erika-text">
           ✨ "Hi my loves, I'm Erika Owls.<br><br>
           After thousands of personal tarot readings for people all over the world, I've created Tapp — your pocket guide to clarity, built to feel just like a real reading with me.<br><br>
