--- a/public/welcome-2.html
+++ b/public/welcome-2.html
@@ -17,7 +17,7 @@
 
   <div class="chat-container" id="chatContainer">
     <div class="chat-message erika">
-      <img src="/assets/erika-avatar.png" class="avatar">
+      <img src="/assets/your-logo-here.png" class="avatar">
       <div class="chat-bubble">Welcome lovely! Ready to begin your reading?</div>
     </div>
     <div class="chat-action">
